--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>webhook toolkit</title>
+    <title>gators webhook hater</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -127,7 +127,7 @@
 </head>
 <body>
     <div class="webhook-container" id="webhookContainer">
-        <h2 class="webhook-title">webhook toolkit</h2>
+        <h2 class="webhook-title">webhook deleter</h2>
         <div class="input-group">
             <input class="webhook-input" type="text" id="webhookUrl" placeholder="enter webhook url" autocomplete="off">
         </div>
